# netfyr

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DCO.md  GOVERNANCE.md  Makefile  README.md  make_presentation.py  netfyr.spec  netfyr_presentation.pptx
.claude/: settings.local.json
.claude/skills/netfyr-check/: SKILL.md  show-changes.sh
crates/netfyr-backend/: Cargo.toml
crates/netfyr-backend/src/: lib.rs  registry.rs  trait_.rs
crates/netfyr-backend/src/dhcp/: client.rs  lease.rs  mod.rs
crates/netfyr-backend/src/netlink/: apply.rs  ethernet.rs  interface.rs  mod.rs  query.rs
crates/netfyr-backend/tests/: dhcp_factory.rs  netlink_apply.rs  netlink_ethernet.rs
crates/netfyr-cli/: Cargo.toml
crates/netfyr-cli/src/: apply.rs  completions.rs  diagnose.rs  history.rs  lib.rs  main.rs  netfyr_cli_main.rs  query.rs  revert.rs  show.rs
crates/netfyr-cli/src/history/: display.rs  format.rs  mod.rs
crates/netfyr-cli/tests/: apply_integration.rs  binary_output.rs  history_integration.rs  query_integration.rs  revert_integration.rs
crates/netfyr-daemon/: Cargo.toml
crates/netfyr-daemon/src/: factory_manager.rs  main.rs  netlink_monitor.rs  policy_store.rs  reconciler.rs  server.rs
crates/netfyr-daemon/src/ipv6auto/: address.rs  mod.rs  ra.rs
crates/netfyr-daemon/src/ipv6auto/dhcpv6/: client.rs  duid.rs  lease.rs  mod.rs
crates/netfyr-daemon/tests/: server_integration.rs
crates/netfyr-journal/: Cargo.toml
crates/netfyr-journal/src/: entry.rs  journal.rs  lib.rs  serializable.rs
crates/netfyr-policy/src/: lib.rs
crates/netfyr-reconcile/: Cargo.toml
crates/netfyr-reconcile/src/: conflict.rs  diff.rs  lib.rs  report.rs
crates/netfyr-state/src/: diff.rs  entity.rs  field.rs  lib.rs  loader.rs  metadata.rs  provenance.rs  schema.rs  selector.rs  set.rs  value.rs  yaml.rs
crates/netfyr-state/src/schemas/: ethernet.json  ip.json  ipv4.json  ipv6.json  link.json  wifi.json
crates/netfyr-state/tests/: architecture_docs.rs  entity_state_types.rs  workspace_setup.rs
crates/netfyr-test-utils/src/: netns.rs
crates/netfyr-test-utils/tests/: workspace_setup.rs
crates/netfyr-varlink/src/: client.rs  io.netfyr.varlink  lib.rs  types.rs
docs/: architecture.md  workflows.md
docs/specs/: policy-model.md  server-architecture.md
man/: netfyr-apply.1  netfyr-completions.1  netfyr-daemon.8  netfyr-diagnose.1  netfyr-examples.7  netfyr-history.1  netfyr-query.1  netfyr-revert.1  netfyr-show.1  netfyr.1  netfyr.yaml.5
scripts/: build-copr.sh  build-rpm.sh  install.sh  run-integration-tests.sh
tests/: 001-file-structure.sh  001-individual-crate-compile.sh  001-makefile-target.sh  001-readme.sh  001-workspace-compile.sh  001-workspace-members.sh  010-daemon-exit-trap.sh  010-daemon-harness-functions.sh  010-daemon-lifecycle.sh  010-daemon-start-env.sh  010-daemon-start-no-socket.sh  010-require-binaries.sh  010-setup-dhcp-topology.sh  010-wait-for-address.sh  102-query-addresses-ipv4-ipv6.sh  102-query-all-veth-pair.sh  102-query-and-selector.sh  102-query-by-driver.sh  102-query-by-mac.sh  102-query-carrier-up.sh  102-query-excludes-bridge.sh  102-query-ipv6-dad-state.sh  102-query-ipv6-dad-transmits.sh  102-query-ipv6-link-local.sh  102-query-ipv6-routes.sh  102-query-kernel-routes-excluded.sh  102-query-link-down.sh  102-query-routes.sh  102-query-veth-by-name.sh  103-apply-add-remove-address.sh  103-apply-add-route.sh  103-apply-addr-idempotent-remove.sh  103-apply-addr-idempotent.sh  103-apply-address-lifetime.sh  103-apply-dry-run-nonexistent.sh  103-apply-dry-run.sh  103-apply-field-ordering.sh  103-apply-ipv6-addr-gen-mode.sh  103-apply-ipv6-address-lifetime.sh  103-apply-ipv6-address.sh  (+194 more)
xtask/src/: main.rs
xtask/tests/: architecture_docs.rs  man_pages.rs  packaging.rs
