[package]
name = "netfyr-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "netfyr_cli"
path = "src/lib.rs"

[[bin]]
name = "netfyr"
path = "src/main.rs"

[[bin]]
name = "netfyr-cli"
path = "src/netfyr_cli_main.rs"

[dependencies]
# CLI argument parsing — no std equivalent for subcommands and derive macros
clap = { version = "4", features = ["derive"] }
# Async runtime — backend and varlink operations are all async
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Error handling with context chains — spec explicitly requires anyhow
anyhow = "1"
# Terminal colors — spec explicitly requires colored; auto-detects TTY and NO_COLOR
colored = "2"
# JSON value type and serialization — needed for flat map output in query
serde_json = "1"
# YAML serialization — needed for default output format in query
serde_yaml = "0.9"
# Ordered map — needed for insertion-order-preserving flat maps in query output
# (serde_json::Map is backed by BTreeMap which sorts keys alphabetically)
indexmap = { version = "2", features = ["serde"] }
# Internal crates
netfyr-policy = { path = "../netfyr-policy" }
netfyr-reconcile = { path = "../netfyr-reconcile" }
netfyr-backend = { path = "../netfyr-backend" }
netfyr-varlink = { path = "../netfyr-varlink" }
netfyr-state = { path = "../netfyr-state" }

[dev-dependencies]
netfyr-test-utils = { path = "../netfyr-test-utils" }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
